--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,7 +152,7 @@
         app:layout_constraintVertical_bias="0.92" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/logsignup"
         android:layout_width="@dimen/_124sdp"
         android:layout_height="@dimen/_24sdp"
         android:gravity="center"
