--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logoimg"
         android:layout_width="@dimen/_168sdp"
         android:layout_height="@dimen/_84sdp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +22,7 @@
         tools:ignore="ContentDescription,MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/logonameimg"
         android:layout_width="@dimen/_399sdp"
         android:layout_height="@dimen/_99sdp"
         android:fontFamily="@font/apptext"
@@ -38,7 +38,7 @@
         tools:ignore="HardcodedText,MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/ownerone"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_25sdp"
         android:fontFamily="@font/spartan_thin"
@@ -55,7 +55,7 @@
         app:layout_constraintVertical_bias="0.898" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/ownertwo"
         android:layout_width="@dimen/_200sdp"
         android:layout_height="@dimen/_25sdp"
         android:fontFamily="@font/spartan_thin"
