--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/mainUserRecycleView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainback"
@@ -53,6 +53,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mainUserRecycle"
         android:layout_width="367dp"
         android:layout_height="390dp"
         android:layout_alignParentStart="true"
