--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:textStyle="bold" />
 
         <ImageView
+            android:id="@+id/logoutimg"
             android:layout_width="41dp"
             android:layout_height="41dp"
             android:layout_gravity="center"
