--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,15 @@
     </style>
 
     <style name="Theme.VSChat" parent="Base.Theme.VSChat" />
+
+    <style name="dialog">
+        <item name="android:windowIsTranslucent">@drawable/empty_background</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowMinWidthMajor">80%</item>
+        <item name="windowActionBar">false</item>
+
+    </style>
+
+
+
 </resources>
