--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,25 +11,25 @@
 
     <LinearLayout
         android:id="@+id/toolBar"
-        android:layout_width="355dp"
-        android:layout_height="72dp"
+        android:layout_width="347dp"
+        android:layout_height="68dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
 
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginRight="29dp"
         android:background="@color/white"
         android:gravity="right">
 
         <TextView
-            android:layout_width="287dp"
-            android:layout_height="39dp"
+            android:layout_width="284dp"
+            android:layout_height="36dp"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_weight="1"
@@ -41,8 +41,8 @@
 
         <ImageView
             android:id="@+id/logoutimg"
-            android:layout_width="41dp"
-            android:layout_height="41dp"
+            android:layout_width="38dp"
+            android:layout_height="34dp"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/logout">
@@ -65,40 +65,35 @@
         android:layout_marginBottom="155dp" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="49dp"
-        android:layout_alignParentStart="true"
+        android:id="@+id/camBut"
+        android:layout_width="55dp"
+        android:layout_height="63dp"
 
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="101dp"
-        android:layout_marginEnd="249dp"
-        android:layout_marginBottom="55dp"
+        android:layout_marginStart="89dp"
+        android:layout_marginBottom="28dp"
         android:src="@drawable/camera" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="53dp"
-        android:layout_alignParentStart="true"
+
+        android:layout_width="64dp"
+        android:layout_height="66dp"
 
         android:layout_alignParentEnd="true"
-
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="170dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="24dp"
         android:src="@drawable/chat" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="52dp"
-        android:layout_alignParentStart="true"
-
+        android:id="@+id/settingBut"
+        android:layout_width="59dp"
+        android:layout_height="53dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="242dp"
-        android:layout_marginEnd="107dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="29dp"
         android:src="@drawable/sett" />
 
 
